# autoprogramming

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: orchestrated-search.md
scratch/: tinker.md  tst2.py
skills/autoprogramming/: SKILL.md
skills/autoprogramming/references/: prg-api.md
src/autoprogramming/: __init__.py  adherence.py  backend.py  budget.py  candidates.py  data.py  errors.py  guards.py  harness.py  logs.py  metric.py  objectives.py  pi_backend.py  pi_rpc.py  pi_worker.py  portfolio.py  program.py  resources.py  runner.py  schema.py  scoring.py  workspace.py
src/autoprogramming/pi/: worker-guard.ts
src/autoprogramming/skills/candidate-optimizer/: SKILL.md
tests/: test_adherence.py  test_backend.py  test_budget.py  test_candidates.py  test_data.py  test_e2e.py  test_guards.py  test_harness.py  test_logs.py  test_metric.py  test_objectives.py  test_pi_backend.py  test_portfolio.py  test_program.py  test_resources.py  test_runner.py  test_schema.py  test_scoring.py  test_secure_workspace.py  test_skills.py  test_workspace.py
