[project]
name = "autoprogramming"
version = "0.1.0"
description = "Define your inputs and outputs, and let a coding agent find the best implementation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoprogramming"]
